[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrf"
version = "0.2.0"
description = "Utils for DRF text charts."
authors = [
    { name = "Matt" }
]
readme = "README.md"
license = { text = "GPL" }
requires-python = ">=3.13"
dependencies = [
]
